samples/_failures_safe/1761518786_d353af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7c56aa1.c: In function ‘main’:
./samples/SAFE/__tmp_c7c56aa1.c:143:17: error: expected ‘;’ at end of input
  143 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_c7c56aa1.c:143:9: error: expected declaration or statement at end of input
  143 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_c7c56aa1.c:143:9: error: expected declaration or statement at end of input
